Cambios en .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-/target/
+## Ignorar todo por defecto
+*
+
+## Excepciones: permitir src y bin
+!src/
+!Enunciados/
+!pom.xml
+!lib/
+!Imagenes/
+!Documentacion/
+
+## Ignorar todo dentro de src y bin, excepto sus contenidos
+src/*
+!src/**
+Enunciados/*
+!Enunciados/**
+!Documentacion/** */
+lib/*
+!lib/**
+Imagenes/*
+!Imagenes/**
+Documentacion/*
+!Documentacion/**
